src/types/tests/snapshots/tgbot__types__tests__ephemeral__delete_ephemeral_message.snap
---
source: src/types/tests/ephemeral.rs
expression: actual_data
---
{
  "chat_id": 1,
  "ephemeral_message_id": 3,
  "receiver_user_id": 2
}
