src/types/tests/snapshots/tgbot__types__tests__ephemeral__edit_ephemeral_message_caption-2.snap
---
source: src/types/tests/ephemeral.rs
expression: actual_data
---
{
  "caption": "test",
  "chat_id": 1,
  "ephemeral_message_id": 3,
  "receiver_user_id": 2,
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "test",
          "url": "example.com"
        }
      ]
    ]
  }
}
