src/types/tests/snapshots/tgbot__types__tests__ephemeral__edit_ephemeral_message_media-2.snap
---
source: src/types/tests/ephemeral.rs
expression: actual_data
---
{
  "__attachments__": [
    {
      "id": "tgbot_file_1",
      "mime_type": null,
      "name": null
    }
  ],
  "chat_id": 1,
  "ephemeral_message_id": 3,
  "media": {
    "media": "attach://tgbot_file_1",
    "type": "animation"
  },
  "receiver_user_id": 2,
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "test",
          "url": "example.com"
        }
      ]
    ]
  }
}
