src/types/tests/snapshots/tgbot__types__tests__ephemeral__edit_ephemeral_message_media.snap
---
source: src/types/tests/ephemeral.rs
expression: actual_form.into_fields()
---
[
    (
        "chat_id",
        FormValue::Text(
            "1",
        ),
    ),
    (
        "ephemeral_message_id",
        FormValue::Text(
            "3",
        ),
    ),
    (
        "im_media",
        FormValue::File {
            name: None,
            mime_type: None,
        },
    ),
    (
        "media",
        FormValue::Text(
            "{\"type\":\"animation\",\"media\":\"attach://im_media\"}",
        ),
    ),
    (
        "receiver_user_id",
        FormValue::Text(
            "2",
        ),
    ),
]
