src/types/tests/snapshots/tgbot__types__tests__ephemeral__edit_ephemeral_message_reply_markup-2.snap
---
source: src/types/tests/ephemeral.rs
expression: actual_data
---
{
  "chat_id": "@chat",
  "ephemeral_message_id": 3,
  "receiver_user_id": 2,
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "test",
          "url": "example.com"
        }
      ]
    ]
  }
}
