src/types/tests/snapshots/tgbot__types__tests__ephemeral__edit_ephemeral_message_text-3.snap
---
source: src/types/tests/ephemeral.rs
expression: actual_data
---
{
  "chat_id": 1,
  "entities": [
    {
      "length": 2,
      "offset": 0,
      "type": "bold"
    }
  ],
  "ephemeral_message_id": 3,
  "link_preview_options": {},
  "receiver_user_id": 2,
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "test",
          "url": "example.com"
        }
      ]
    ]
  },
  "text": "test"
}
